# CosyVoice

./: README.md  pyproject.toml  vllm.py
cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
cosyvoice/flow/: flow.py
cosyvoice/hifigan/: generator.py
cosyvoice/utils/: common.py  executor.py
