[project]
name = "cosyvoice"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "conformer==0.3.2",
    "deepspeed==0.15.1 ; sys_platform == 'linux'",
    "diffusers==0.29.0",
    "fastapi==0.115.6",
    "fastapi-cli==0.0.20",
    "gdown==5.1.0",
    "gradio==5.4.0",
    "grpcio==1.57.0",
    "grpcio-tools==1.57.0",
    "hydra-core==1.3.2",
    "hyperpyyaml==1.2.2",
    "inflect==7.3.1",
    "librosa==0.10.2",
    "lightning==2.2.4",
    "matplotlib==3.7.5",
    "networkx==3.1",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "onnx==1.16.0",
    "onnxruntime==1.18.0 ; sys_platform == 'darwin' or sys_platform == 'win32'",
    "onnxruntime-gpu==1.18.0 ; sys_platform == 'linux'",
    "openai-whisper==20231117",
    "protobuf==4.25",
    "pyarrow==18.1.0",
    "pydantic==2.12.5",
    "pyworld==0.3.4",
    "rich==13.7.1",
    "soundfile==0.12.1",
    "tensorboard==2.14.0",
    "tensorrt-cu12==10.13.3.9 ; sys_platform == 'linux'",
    "tensorrt-cu12-bindings==10.13.3.9 ; sys_platform == 'linux'",
    "tensorrt-cu12-libs==10.13.3.9 ; sys_platform == 'linux'",
    "transformers<5.0",
    "uvicorn==0.30.0",
    "wetext==0.0.4",
    "wget==3.2",
    "x-transformers==2.11.24",
]

[project.optional-dependencies]
ttsfrd = [
    "ttsfrd-dependency",
]
vllm = [
    "vllm==0.11.0",
]
webui = [
    "gradio>=5.4.0",
]


[tool.uv.sources]
torch = [
   { index = "pytorch", marker =  "sys_platform == 'linux'" }
]

onnxruntime-gpu = { index = "onnxruntime" }
ttsfrd-dependency = { path = "pretrained_models/CosyVoice-ttsfrd/ttsfrd_dependency-0.1-py3-none-any.whl" }

[tool.uv]
dependency-metadata = [
    { name = "tensorrt-cu12", version = "10.13.3.9", requires-dist = [
        "tensorrt-cu12-bindings==10.13.3.9",
        "tensorrt-cu12-libs==10.13.3.9",
    ] },
    { name = "tensorrt-cu12-bindings", version = "10.13.3.9", requires-dist = [
        "tensorrt-cu12-libs==10.13.3.9",
    ] },
    { name = "tensorrt-cu12-libs", version = "10.13.3.9" }
]
required-environments = [
	"sys_platform == 'darwin' and platform_machine == 'arm64'"
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit=true

[[tool.uv.index]]
name = "onnxruntime"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple"
explicit=true

[dependency-groups]
dev = [
    "modelscope>=1.20.0",
]
